<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fogplix Anime</string>
    <string name="header_layout_sub_text">Fogplix Anime</string>

    <string name="subbed">Sub</string>
    <string name="dubbed">Dub</string>
    <string name="chinese">Chinese</string>
    <string name="movies">Movies</string>
    <string name="genres">Genres</string>
    <string name="popular">Popular</string>
    <string name="synopsis">Synopsis</string>

    <string name="proxy_browser_link">https://proxy.fogplix-anime.com/browse.php?link=</string>

    <string name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36</string>
    <string name="app_sharing_message">Watch free anime (Dubbed and Subbed) with Fogplix Anime app. Download now from </string>
    <string name="onesignal_app_id" tools:ignore="TypographyDashes,Typos">c0feb5c5-3fe1-490a-bcf2-0af7ed45a18b</string>
    <string name="compose_shortcut_label_for_favorites">Favorites</string>
    <string name="compose_shortcut_label_for_search">Search</string>

    <string name="version_page_link">https://benojir.github.io/Fogplix-Landing-Page/updates/version.json</string>
    <string name="new_notice_json_link">https://benojir.github.io/Fogplix-Landing-Page/updates/fogplix-alert.json</string>
    <string name="playable_servers_status_json_link">https://benojir.github.io/Fogplix-Landing-Page/updates/playable-servers-status.json</string>

    <string name="official_website">https://benojir.github.io/Fogplix-Landing-Page/</string>
    <string name="official_whatsapp_channel">https://whatsapp.com/channel/0029VajNl2h2ZjCq6hVls72r</string>
    <string name="official_telegram_channel">https://telegram.me/Fogplix</string>
    <string name="official_telegram_group">https://telegram.me/FogplixGroup</string>
    <string name="more_apps">https://benojir.github.io/Fogplix-Landing-Page/more-apps.html</string>

    <string name="gogoload_recent">https://ajax.gogocdn.net/ajax/page-recent-release.html</string>
    <string name="gogoload_list_episodes">https://ajax.gogocdn.net/ajax/load-list-episode</string>
    <string name="gogoanime_url">https://gogoanime3.co</string>

    <string name="isp_blocked">Oops! Maybe your ISP has blocked our server. Please try using any VPN or enable proxy from settings page. May be it can help.
        Please take a screenshot and report this error to us.</string>
    <string name="adblock_detected">As you\'re using an ad-blocker, it might block our proxy server and cause issues. To fix this, either turn off the proxy in settings or disable the ad-blocker.</string>

    <string name="feedback_email">hiddenpirates@outlook.com</string>
    <string name="episode_playing_failed_message">Failed to play this episode. Please take a screenshot and report it to us. Now try to play on the web player. Just click on the below button \n</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="asking_donation">Dear Anime Fans,\n\nWe hope you’re enjoying Fogplix Anime! To keep this free service running, we rely on a VPS server that costs us $5 each month. Since we don’t earn from this, we humbly ask for your support.\n\nAny small donation would be greatly appreciated and would help us continue offering this service. Thank you so much for being part of our community and for considering a contribution.\n\nWith sincere gratitude,\nThe Fogplix Anime Team</string>
    <string name="donation_subject">Support Fogplix Anime - Your Free Anime Streaming Service!</string>
    <string name="bmc_donation_link">https://buymeacoffee.com/mrsparvinry</string>

    <string name="proxy_setting_title">Proxy</string>
    <string name="proxy_setting_summary_on">Now you are able to browse Fogplix Anime through proxy</string>
    <string name="proxy_setting_summary_off">Use proxy to bypass your ISP (Internet Service Provider) blockage</string>
    <string name="skip_85s_title">Show 85s Skip Button</string>
    <string name="skip_85s_summary_on">85 seconds skip button is enabled</string>
    <string name="skip_85s_summary_off">85 seconds skip button is disabled.</string>
    <string name="auto_play_next_episode_summary_off">Next episode will not play automatically.</string>
    <string name="auto_play_next_episode_summary_on">Next episode will be played when current episode ended.</string>
    <string name="auto_play_next_episode_title">Auto Play Next Episode</string>

</resources>